...
            android:id="@+id/layout_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_edges_input"
            android:layout_marginTop="@dimen/margin_edges_medium"
            android:layout_marginEnd="@dimen/margin_edges_input"
            android:hint="@string/label_amount"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_outgoing_coin"
            app:passwordToggleDrawable="@null"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0,1,2,3,4,5,6,7,8,9,.,\,"
                android:ellipsize="end"
                android:tag="amount"
                android:inputType="textMultiLine|numberDecimal"
...
                tools:text="1.102030405060708090102030405060708090"
                app:errorTextAppearance="@style/Wallet.ErrorTextAppearance"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/action_maximum"
            style="@style/Wallet.Text.ButtonBorderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="6dp"
            android:text="@string/btn_use_max"
...
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_edges_half"
                android:fontFamily="@font/_ubuntu_medium"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_22"
                android:ellipsize="none"
                android:maxLines="100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calculation_title"
                tools:text="1 000 288 859 454 671 683 189 102 649 595 518 589 437 586 374 105 388 329 571 031 220 769 944 178 978 247 137 569 836 967 570 972 662 549 939 674 191 668 790 939 167 959 399 268 002 355 388 000 949 308 312 784 846 611 858 588 290 828.3882 MNT"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_calculation"
            />

        <TextView
            android:id="@+id/fee_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_edges"
            android:layout_marginTop="@dimen/margin_edges_half"
            android:text="@string/tx_send_fee_hint"
            android:textSize="@dimen/text_size_default"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_guide"
            />

        <TextView
            android:id="@+id/fee_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_edges_half"
            android:layout_marginEnd="@dimen/margin_edges"
            android:fontFamily="@font/_ubuntu_medium"
            android:text="@string/tx_send_fee_value"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sep2"
            />

        <network.minter.bipwallet.internal.views.widgets.WalletButton
            android:id="@+id/action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_edges"
            android:layout_marginTop="@dimen/margin_edges"
            android:layout_marginEnd="@dimen/margin_edges"
            android:text="@string/btn_exchange"
...
