...
    <string name="btn_add_liquidity">Add Liquidity</string>
    <string name="btn_add_message">Add Message</string>
    <string name="btn_add_wallet">Add New Wallet</string>
    <string name="btn_advanced_mode">Advanced mode</string>
    <string name="btn_all_txs">All Transactions</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_close">Close</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_confirm_send">Confirm and Send</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_create_wallet">Create Wallet</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_draggable">Drag the dialog</string>
...
    <string name="btn_remove_wallet">Remove Wallet</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_save">Save</string>
    <string name="btn_save_address">Save This Address</string>
    <string name="btn_save_changes">Save Changes</string>
    <string name="btn_scan_qr">Scan QR</string>
    <string name="btn_send">Send</string>
    <string name="btn_settings">Open settings</string>
    <string name="btn_share_address">Share address</string>
    <string name="btn_share_tx">Share Transaction</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_support_chat">Support Chat</string>
    <string name="btn_unbond">Unbond</string>
...
    <string name="dialog_title_delete_wallet">Remove Wallet</string>
    <string name="dialog_title_edit_contact">Edit Address</string>
    <string name="dialog_title_edit_wallet">Edit Wallet</string>
    <string name="dialog_title_err_invalid_deeplink">Invalid transaction data: %1$s</string>
    <string name="dialog_title_err_unable_scan_qr">Unable to scan QR</string>
    <string name="dialog_title_err_unable_to_handle_deeplink">Unable to handle deeplink</string>
    <string name="dialog_title_err_unable_to_send_tx">Unable to send transaction</string>
    <string name="dialog_title_exchange_begin">Confirm Exchange</string>
    <string name="dialog_title_exchanging">Exchanging</string>
    <string name="dialog_title_generate_new_wallet">Generate New Wallet</string>
    <string name="dialog_title_logout">Logging Out</string>
    <string name="dialog_title_remove_liquidity">Remove Liquidity from Swap Pool</string>
    <string name="dialog_title_send_type">You are sending</string>
...
    <string name="title_pin_enter">Enter PIN-code</string>
    <string name="title_pin_enter_current">Enter current PIN-code</string>
    <string name="title_pin_enter_new">Enter new PIN-code</string>
    <string name="title_pin_repeat">Confirm PIN-code</string>
    <string name="title_pin_set">Set PIN-code</string>
    <string name="title_remove_liquidity">Remove Liquidity</string>
    <string name="title_select_account">Select Account</string>
    <string name="title_share_story">Share Story</string>
    <string name="title_tab_sending">Send Coins</string>
    <string name="title_tab_settings">Settings</string>
    <string name="title_transaction_list">All Transactions</string>
    <string name="title_unbond">Unbond</string>

...
    <string name="tx_send_coin_hint">Coin</string>
    <string name="tx_send_fee_hint">Transaction Fee</string>
    <string name="tx_send_fee_value">0.00000001 BIP</string>
    <string name="tx_send_in_progress">Sending transaction…</string>
    <string name="tx_send_overall_title">Confirm Transaction</string>
    <string name="tx_send_payload_hint">You can add a message to your transaction</string>
    <string name="tx_send_recipient_hint">To (Mx Address or Name)</string>
    <string name="tx_send_success_dialog_description">Coins are received by</string>
    <string name="tx_type_add_limit_order">Add Limit Order</string>
    <string name="tx_type_add_liquidity">Add Liquidity</string>
    <string name="tx_type_burn_token">Burn Token</string>
    <string name="tx_type_buy_swap_pool">Buy Swap Pool</string>
    <string name="tx_type_change_coin_owner">Change Coin Owner</string>
    <string name="tx_type_create_coin">Create Coin</string>
...
