...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounder_top_primary"
            android:fontFamily="@font/_ubuntu_bold"
            android:gravity="center"
            android:minHeight="50dp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            >

            <TextView
                android:id="@+id/dialog_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/_ubuntu_bold"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_24"
                app:layout_constraintEnd_toEndOf="parent"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tx_to_label"
                />

            <TextView
                android:id="@+id/tx_recipient_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_edges_half"
                android:fontFamily="@font/_ubuntu_bold"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_14"
...
                app:layout_constraintTop_toBottomOf="@id/tx_recipient_avatar"
                tools:text="\@PavelDurov"
                />


            <network.minter.bipwallet.internal.views.widgets.WalletButton
                android:id="@+id/action_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_edges_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tx_recipient_name"
...
