...
    android:paddingStart="@dimen/margin_edges"
    android:paddingTop="@dimen/margin_edges"
    android:paddingEnd="@dimen/margin_edges"
    >

    <TextView
        android:id="@+id/tx_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tx_send_success_dialog_description"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintTop_toBottomOf="@id/tx_recipient_avatar"
        tools:text="\@PavelDurov"
        />


    <network.minter.bipwallet.internal.views.widgets.WalletButton
        android:id="@+id/action_view_tx"
        style="@style/Wallet.Button.Transparent.BlueBorder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_edges_medium"
        android:text="@string/btn_view_tx"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_second_value"
        />

    <network.minter.bipwallet.internal.views.widgets.WalletButton
        android:id="@+id/action_close"
        style="@style/Wallet.Button.Transparent.BlueBorder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_edges"
        android:text="@string/btn_close"
        app:layout_constraintEnd_toEndOf="parent"
...
